--- a/prolog.rmd
+++ b/prolog.rmd
@@ -3,7 +3,7 @@
 Målsättningarna med denna bok är att:
 
 1. Ge en orienterade introduktion till respektive ämnesområde.
-2. Fungera som en uppslagsbok för klinisk psykiatrisk verksamhet.
+2. Fungera som en uppslagsbok för kliniskt arbete.
 3. Ge hänvisningar till källor och fördjupningsmaterial.
 
 _kursiverade_ ord förklaras i ordlistan (kapitel \@ref(ordlista)).
