--- a/psykofarmakologi.rmd
+++ b/psykofarmakologi.rmd
@@ -69,6 +69,12 @@ The CATIE and CUtLASS studies in schizophrenia: results and implications for cli
 Inga skillnader mellan grupperna (SGA vs FGA) i fråga om livskvalitet eller symtom.
 
 
+### Motoriska biverkningar av anipsykotiska läkemedel
+
+Tidsförlopp
+
+Behandling
+
 
 ### Tardiv dyskinesi
 
