--- a/index.rmd
+++ b/index.rmd
@@ -31,8 +31,10 @@ csl: ../bibliography/oxford-scimed.csl
 ## set global options for knitr
 knitr::opts_chunk$set(echo=FALSE,
                       warning=FALSE,
-                      message=FALSE)
+                      message=FALSE,
+                      out.width = "800px")
 
+options(knitr.graphics.auto_pdf = TRUE) ## if latex .pdf files will replace .png
 ## options(knitr.table.format = "markdown") # for kable tables
 options(knitr.kable.NA = '')
 
